# hello-sdl

./: .gitmodules  CMakeLists.txt  README.md
src/: index.html  main.c
